fixed text alignment, photo flex, and viewport issues

--- a/_sass/01-base/base.scss
+++ b/_sass/01-base/base.scss
@@ -4,7 +4,7 @@
 
 body {
   font-family: gotham-book;
-  line-height: 1.2
+  line-height: 1.2;
 }
 .custom-container {
   margin: 0 auto;
